:nail_care: fixed horizental alignement for sidebar's navigation links

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
   background-color: white;
   font-family: "Rubik", sans-serif;
 }
